--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,11 @@ color: rgb(0, 0, 0);
     height: auto;
 }
 
+@media (min-width: 320px) and (max-width: 1024px) {
 
+    .explore  { width: 100vw; }  
+
+}
 
 
 
