--- a/css/base.css
+++ b/css/base.css
@@ -12,9 +12,6 @@ html {
     color: black;
 }
 
-img, picture { max-width: 100%; display: block; height: auto;}
-a {color: inherit; text-decoration: none;}
-ul, ol { margin: 0; padding: 0; list-style: none;}
 
 
 :focus-visible { outline: 3px solid #3958bb; outline-offset: auto;}
@@ -136,3 +133,139 @@ color: rgb(0, 0, 0);
 .logo img {width: 100px;
     flex-direction: column;
 }
+
+/* FOOTER */
+
+footer {
+    width: 100%;
+    bottom: 0; padding: 20px 20px 25px; /* change this after */
+    border: 125px;
+    font-size: 0.8rem;
+    line-height: 18px;
+    background: #C6D6F4;
+    color: black;
+}
+
+.row {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: column; /* change to flex wrap in media */
+    align-items: flex-start;
+    justify-content: space-between;
+    
+}
+
+.col img {
+    max-width: 100%;
+    width: 150px;
+    padding: 0 0 0 0;
+}
+
+
+col {
+    padding: 10px 10px;
+    color: black;
+} 
+
+.col h4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+} 
+
+.col h3 {
+    font-size: 0.9rem;
+    margin-bottom: 20px;
+    margin-top: 25px;
+    position: relative;
+}
+
+.col h5 {
+    font-size: 0.8rem;
+    margin-top: 20px;
+    letter-spacing: 1px;
+}
+
+.col ul li {
+    list-style: none;
+    line-height: 30px;
+    font-size: 0.9rem;
+    color: black;
+}
+
+.col li a {
+    color: black;
+    text-decoration: none;
+}
+
+.col p {
+    line-height: 25px;
+}
+
+.col h5 {
+    margin: 12px 0 25px;
+    font-size: 0.75rem;
+}
+
+form {
+    padding-bottom: 5px;
+    display: flex;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    margin-bottom: 15px;
+    width: 270px;
+}
+
+form input {
+    width: 100%;
+    padding: 0;
+    background: transparent;
+    border: 0;
+}
+
+form button {
+    background: transparent;
+    border: 0;
+    padding: 5px;
+    font-size: 1.1rem;
+}
+
+.col a:hover {
+    font-weight: 600;
+}
+
+.social-icons {
+    font-size: 1.15rem;
+}
+
+@media (min-width: 1000px) and (max-width: 2560px) {
+    
+    footer {
+        
+        padding: 40px 50px 25px; /* change this after */
+        font-size: 0.7rem;
+    }
+    
+
+    .row {
+        width: 100%;
+        flex-direction: row;
+    }
+     
+    .col, .col h5, .col ul li  {
+        font-size: 0.75rem;
+    }
+
+    .col h3 {
+        font-size: 0.85rem;
+    }
+
+
+    form input {
+        width: 90%;
+
+    }
+
+ }
+
