--- a/css/contribution.css
+++ b/css/contribution.css
@@ -3,99 +3,58 @@
 
 article p {
     padding: 10px 0;
-    font-size: 0.8rem;
-    letter-spacing: 0.1px;
-    line-height: 26px;
-    font-weight: 450; 
+    font-size: 0.8rem; font-weight: 450; 
+    letter-spacing: 0.1px; line-height: 26px;
 }
 
-
 .heading {
-    font-family: unbounded;
+    font-family: unbounded; font-size: 0.85rem;
     text-align: center;
-    font-size: 0.85rem;
     background-color: #C6D6F4;
     padding: 20px 12px 20px;
 }
 
 .supportus {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+    display: flex; flex-direction: column; text-align: left; align-items: start;
     padding: 0 15px 5px 15px;
     letter-spacing: 0.1px;
     max-width: 1024px;
-    align-items: start;
     margin: 0 auto;
+    margin-bottom: 25px;
 }
-
-
-
 
 .event-header {    
-    font-size: 0.75rem;
-    letter-spacing: 0.1px;
-    font-family: unbounded;
-    padding: 40px 0 10px;
-    
+    font-size: 0.75rem; font-family: unbounded;
+    letter-spacing: 0.1px; padding: 40px 0 10px;
 }
 
-
-
 .event-header img, .supportus img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    padding: 20px 0;
-    margin: 0 auto;
+    display: block; max-width: 100%;
+    height: auto; object-fit: cover; padding: 20px 0; margin: 0 auto;
 }
 
 .all-buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    max-width: 400px;
-    padding: 20px 0;
-    margin: 0 auto;
+    display: flex; align-items: center; justify-content: center; flex-wrap: wrap;
+    gap: 10px; max-width: 400px; padding: 20px 0; margin: 0 auto;
     text-decoration: none;
 }
 
-.all-buttons a {
-    text-decoration: none;
-}
+.all-buttons a { text-decoration: none; }
 
 .buttons {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    width: 145px;
-    height: 145px;
+    justify-content: center; align-items: center; text-align: center;
+    width: 145px; height: 145px;
     cursor: pointer;
-    font-size: 0.8rem;
-    font-family: unbounded;
-    font-weight: 500;
-    background-color: rgb(166, 144, 255, 0.5);
-    color: black;
-    border: none;
-    border-radius: 50%;
+    font-size: 0.8rem; font-family: unbounded; font-weight: 500;
+    background-color: rgb(166, 144, 255, 0.5); color: black;
+    border: none; border-radius: 50%;
     margin: 10px;
-    
-
 }
 
-.donate { background-color: rgb(220, 120, 255, 0.5) ; }
-.volunteer { background-color: rgb(220, 120, 255, 0.5) ; }
-
+.donate, .volunteer { background-color: rgb(220, 120, 255, 0.5) ; }
 
 .f-support {
-    padding: 10px 5px 10px 5px ;
-    text-align: center;
-    cursor: pointer;
-    font-size: 0.7rem;
-    border-radius: 0  0 20px 20px ;
+    padding: 10px 5px 10px 5px ; text-align: center; cursor: pointer;
+    font-size: 0.7rem; border-radius: 0  0 20px 20px ;
 }
