DRYed up base.css and contact.css

--- a/css/base.css
+++ b/css/base.css
@@ -128,6 +128,14 @@ color: rgb(0, 0, 0);
 
 }
 
+.heading {
+    font-family: unbounded;
+    text-align: center;
+    font-size: 0.85rem;
+    background-color: #C6D6F4;
+    padding: 20px 12px 20px;
+}
+
 /* nav logo img */
 
 .logo img {width: 100px;
