--- a/css/contact.css
+++ b/css/contact.css
@@ -3,203 +3,93 @@
 
 article p {
     padding: 8px 0;
-    font-size: 0.75rem;
-    letter-spacing: 0.1px;
-    line-height: 24px;
-    font-weight: 450; 
-}
-
-
-.heading {
-    font-family: unbounded;
-    text-align: center;
-    font-size: 0.85rem;
-    background-color: #C6D6F4;
-    padding: 20px 12px 20px;
+    font-size: 0.75rem; font-weight: 450; 
+    letter-spacing: 0.1px; line-height: 24px;
 }
 
 .contactus, .contactinfo, .more-info {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    padding: 15px;
-    max-width: 1000px;
-    margin: 0 auto ;
-
+    display: flex; flex-direction: column; text-align: left;
+    padding: 15px; max-width: 1000px; margin: 0 auto ;
 }
-
-
 
 .event-header {    
-    font-size: 0.75rem;
-    letter-spacing: 0.2px;
-    font-family: unbounded;
-    padding: 18px 0;
+    font-size: 0.75rem; font-family: unbounded;
+    letter-spacing: 0.2px; padding: 18px 0;
 }
 
-
 .contact h3 {
-    text-align: left;
-    line-height: 22px;
-    letter-spacing: 0.3px;
-    font-size: 0.85rem;
-    font-weight: 600;
+    text-align: left; line-height: 22px; letter-spacing: 0.3px;
+    font-size: 0.85rem; font-weight: 600;
     padding: 15px 0 0;
 }
 
-.contact p {
-    font-size: 0.7rem;
-}
+.contact p { font-size: 0.7rem; }
 
+.form-heading h2 { font-size: 1.1rem; letter-spacing: 0.2px; padding: 30px 0 0; }
 
-
-.form-heading h2 {
-    font-size: 1.1rem;
-    letter-spacing: 0.2px;
-    padding: 30px 0 0;
-}
-
-.form-heading p {
-    font-size: 0.8rem;
-    padding: 0 0 15px;
-    letter-spacing: 0.1px;
-}
+.form-heading p { font-size: 0.8rem; padding: 0 0 15px; letter-spacing: 0.1px; }
 
 /* FORM HERE */
 
 .form {
     background-color: #C6D6F4;
-    max-width: 400px;
-    width: 100%;
+    max-width: 400px; width: 100%;
     padding: 25px 30px;
     border-radius: 15px;
 }
 
 .form .user-details {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 5px 0;
+    display: flex; flex-wrap: wrap; padding: 5px 0;
     justify-content: space-between;
-
 }
 
-.user-message input {
-    height: 150px;
-    width: 100%;
-}
+.user-message input { height: 150px; width: 100%; }
 
-label {
-    padding: 5px 0;
-    font-size: 0.8rem;
-    font-weight: 500;
-}
+label { padding: 5px 0; font-size: 0.8rem; font-weight: 500; }
 
 input {
-    height: 35px;
-    width: 100%;
-    background-color: #a3bdec;
-    border-style: none;
-    border-radius: 4px;
+    height: 35px; width: 100%;
+    background-color: #a3bdec; color: black;
+    border-style: none; border-radius: 4px;
     font-family: poppins;
-    color: black;    
     padding: 5px;
     cursor: pointer;
 }
 
-input::placeholder {
-    color: black;
-    
-}
+input::placeholder { color: black; }
+input[type="submit"] { background-color: #91b3f1; font-size: 0.8rem; font-weight: 500; }
 
-input[type="submit"] {
-    background-color: #91b3f1;
-    font-size: 0.8rem;
-    font-weight: 500;
-}
-
-.submit-button {
-    padding: 20px 0;
-    font-size: 0.8rem;
-    cursor: pointer;
-    
-}
-
-.submit-button input:hover, .user-message input:hover, .user-details input:hover {
-    box-shadow: 0px 2px 1px #3958bb;
-
-}
-
+.submit-button { padding: 20px 0; font-size: 0.8rem; cursor: pointer; }
+.submit-button input:hover, .user-message input:hover, .user-details input:hover { box-shadow: 0px 2px 1px #3958bb; }
 
 /* Contact info */
 
+.c-header { background-color: #C6D6F4; font-size: 0.9rem; letter-spacing: 0.1px; }
+.info, .v-info { padding: 20px 0 20px; }
 
-
-.c-header {
-    background-color: #C6D6F4;
-    font-size: 0.9rem;
-    letter-spacing: 0.1px;
-}
-
-.info, .v-info {
-
-    padding: 20px 0 20px;
-    
-    
-}
-
-.contactinfo {
-    padding-bottom: 25px;
-}
-
-.contactinfo h4 {
-    font-size: 0.8rem;
-    font-weight: 600;
-}
-
-.contactinfo h3 {
-    font-weight: 600;
-}
-
-.contactinfo p {
-    font-size: 0.75rem;
-    padding: 15px 0 0 0;
-}
-
+.contactinfo { padding-bottom: 25px; }
+.contactinfo h4 { font-size: 0.8rem; font-weight: 600; }
+.contactinfo h3 { font-weight: 600; }
+.contactinfo p { font-size: 0.75rem; padding: 15px 0 0 0; }
 
 /* Visitor info */
 
 .v-info h4 {
     padding: 10px 0 ;
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 1rem; font-weight: 500;
     letter-spacing: 0.1px;
 }
 
 .v-info h5 {
-    font-size: 0.85rem;
-    font-weight: 600;
-    letter-spacing: 0.25px;
-    line-height: 20px;
+    font-size: 0.85rem; font-weight: 600;
+    letter-spacing: 0.25px; line-height: 20px;
     padding: 5px 0;
 }
 
-
-
-
-/**/
+/* Responsive */
 
 @media (min-width: 440px) and (max-width: 2560px) { 
 
- .form {
-    text-align: center;
-    margin: 0 auto ;
-
-}
-
-.form-heading h2, .form-heading p {
-    max-width: 200px;
-    margin: 0 auto;
-}
-
-
+ .form { text-align: center; margin: 0 auto ; }
+ .form-heading h2, .form-heading p { max-width: 200px; margin: 0 auto; }
 } 
